--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "handlebars": "^4.5.3",
     "mongoose": "^5.8.9"
   },
   "devDependencies": {
